Add Linux kernel loader and ARM64 boot support
This is a major update that enables booting Linux kernels on ARM64
macOS using Apple Hypervisor.framework (HVF).

Key additions:
- Linux kernel loader with ARM64 Image and x86_64 bzImage support
- Device tree builder (FDT) for ARM64 boot configuration
- GIC (Generic Interrupt Controller) emulation for ARM64
- PSCI (Power State Coordination Interface) handling via HVC traps
- Virtual timer interrupt handling for ARM64
- ARM64-specific vCPU initialization and exception handling
- Memory layout: RAM at 0x40000000, MMIO devices below

The kernel successfully boots through early init with:
- PSCI probe completing (v1.0 detected)
- GIC initialization (gic_handle_irq registered)
- Timer working (24MHz arch_timer)
- Serial console output via PL011 UART

Also includes helper scripts for downloading and building test kernels.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,15 @@ desktop.ini
 *.qcow2
 vmlinuz*
 initrd*
+test-assets/
+guest/
+
+# Linux kernel source
+linux-*.tar.xz
+linux-*/
+
+# Code signing
+entitlements.plist
 
 # Coverage
 *.profraw
