Add microvm CLI tool for running VMs from command line
- Add src/bin/microvm.rs with run, info, help, version commands
- Support --kernel, --initrd, --cmdline, --memory, --cpus, --disk options
- Add [[bin]] entry to Cargo.toml
- Clean up runner.rs imports

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,10 @@ kvm-bindings = { version = "0.7", optional = true }
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 
+[[bin]]
+name = "microvm"
+path = "src/bin/microvm.rs"
+
 [[example]]
 name = "minimal"
 path = "examples/minimal.rs"
