Add VirtIO console with interactive shell support
- Implement VirtIO console device (virtio-console) for hvc0
- Add device tree node for virtio-console with MMIO transport
- Add GIC (Generic Interrupt Controller) emulation for interrupt handling
- Fix GPA to memory offset translation for virtqueue operations
- Add raw terminal mode for stdin input handling
- Handle RX queue notifications to properly deliver input to guest
- Fix queue sync to preserve device runtime state (indices)
- Add hypervisor entitlements file for macOS
- Update .gitignore for build artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,15 @@ guest/
 linux-*.tar.xz
 linux-*/
 
-# Code signing
+# Code signing (keep microvm.entitlements, ignore others)
 entitlements.plist
+
+# Initramfs build directory (contains large binaries)
+initramfs/
+
+# Temporary files
+/tmp/
+*.dtb
 
 # Coverage
 *.profraw
