--- a/microvm.entitlements
+++ b/microvm.entitlements
@@ -4,7 +4,7 @@
 <dict>
     <key>com.apple.security.hypervisor</key>
     <true/>
-    <key>com.apple.vm.networking</key>
-    <true/>
+    <!-- com.apple.vm.networking removed - causes SIGKILL with ad-hoc signing -->
+    <!-- vmnet backend is disabled for now, will need proper code signing to enable -->
 </dict>
 </plist>
