Add vsock outbound proxy for guest networking without vmnet
This enables guest VMs to make outbound TCP connections through the host
without requiring vmnet.framework or special entitlements.

Architecture:
  Guest App → SOCKS5 (127.0.0.1:1080) → outbound-proxy → vsock:7601
       → Host VsockOutboundProxy → TCP → Internet

New components:
- src/proxy/: Host-side proxy that manages TCP connections
  - host.rs: VsockOutboundProxy with connection pooling
  - protocol.rs: Binary protocol for proxy communication
- guest/outbound-proxy/: SOCKS5 server that forwards via vsock
- guest/socks-test/: Test client for verifying connectivity
- scripts/create_initramfs.py: Build custom initramfs with proxy

Key fixes in this commit:
- Fix kernel entry point detection for raw ARM64 Image format
- Fix vCPU SCTLR_EL1 initialization for proper MMU setup
- Fix virtio descriptor chain handling in vsock TX processing
- Add conn_key to guest_port mapping for response routing

Tested: Successfully connected to example.com:80 from guest VM,
sent HTTP request (84 bytes), received response (822 bytes).

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,12 @@ desktop.ini
 vmlinuz*
 initrd*
 test-assets/
-guest/
+
+# Guest directory - track source, ignore binaries and kernel
+guest/kernel/
+guest/*.c
+guest/*_test
+guest/*/target/
 
 # Linux kernel source
 linux-*.tar.xz
