Add vsock communication and VM runtime for Velocitty integration
Key changes:
- Add VirtioRng device for fast entropy in guest VM
- Add VirtIO vsock device with full host-guest communication
- Add VsockClient/VsockHandler for async host-side vsock connections
- Add VmRuntime for integrated VM execution with vsock support
- Fix vsock response routing to use dst_port from packet (was hardcoded)
- Improve MMIO transport with proper feature negotiation
- Add initrd loading support for ARM64
- Enhanced queue management for virtio devices

The vsock implementation enables:
- Host to guest connections via dynamic ports (50000+)
- Request/response pattern for daemon communication
- Proper connection state machine (Connecting -> Connected)
- Bidirectional data transfer with credit flow control

Working state:
- VM boots Linux kernel successfully
- Vsock driver initializes in guest
- Host can connect to guest daemon on port 1025
- Ping/pong and list_profiles commands work correctly

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tracing = ["dep:tracing"]
 thiserror = "1.0"
 bitflags = "2.4"
 libc = "0.2"
+tokio = { version = "1", features = ["sync", "time"] }
 
 # Optional dependencies
 serde = { version = "1.0", features = ["derive"], optional = true }
