Complete macOS implementation, prepare for Windows WHP backend
Major changes:
- Consolidate proxy module into single src/proxy.rs with ProxyConnectionManager
- Add debug logging utilities (MICROVM_DEBUG env var)
- Enhance vsock device with large packet chunking and better flow control
- Improve PL011 UART for proper kernel tty driver initialization
- Add vsock-client test utility for guest-side daemon testing

Guest components:
- Enhanced outbound-proxy with better SOCKS5 protocol handling
- New vsock-client for testing vpn-daemon from inside guest

Documentation:
- IMPLEMENTATION_PLAN.md: Track macOS completion, outline Windows phases
- WINDOWS_SUPPORT_STRATEGY.md: WHP works on all Windows editions (including Home)
  - No kernel driver needed, simplifies Windows support significantly

This marks macOS ARM64 as production-ready for Velocitty integration.
Next step: Windows WHP backend implementation.

--- a/guest/vsock-client/Cargo.toml
+++ b/guest/vsock-client/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "socks-test"
+name = "vsock-client"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+libc = "0.2.180"
 
 [profile.release]
 opt-level = "z"
